# iced-code-editor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  publish_release.sh
.github/workflows/: rust.yml
.opencode/: package.json
demo-app/: Cargo.toml  README.md  demo_file.go  demo_file.js  demo_file.py  demo_file.ts  demo_file.tsx
demo-app/src/: app.rs  file_ops.rs  fonts.rs  lsp_config.rs  lsp_process_client.rs  main.rs  types.rs  ui.rs
demo-app/src/app/: app_lsp.rs
demo-app/src/ui/: lsp.rs
docs/: DEV.md  PUBLISHING.md
iced-code-editor/: Cargo.toml  README_I18N.md
iced-code-editor/examples/: i18n_example.rs
iced-code-editor/src/: canvas_editor.rs  i18n.rs  lib.rs  state.rs  theme.rs
iced-code-editor/src/canvas_editor/: canvas_impl.rs  clipboard.rs  cursor.rs  ime_requester.rs  lsp.rs  mod.rs  search.rs  search_dialog.rs  selection.rs  update.rs  view.rs  wrapping.rs
iced-code-editor/src/canvas_editor/lsp_process/: config.rs  mod.rs  overlay.rs
