[workspace]
resolver = "2"
members = [
    "iced-code-editor",
    "demo-app",
]

default-members = [
    "iced-code-editor",
]

[workspace.package]
version = "0.2.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/LuDog71FR/iced-code-editor"
authors = ["LuDog71 <ludog71.trekker238@passmail.net>"]

[workspace.dependencies]
iced = { version = "0.14", features = ["advanced", "highlighter", "canvas"] }

[profile.release]
panic = 'abort'

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "deny"                       # Denies direct calls to `panic!`. Encourages proper error handling instead of crashing.
unreachable = "deny"                 # Denies unreachable code blocks. Improves code clarity and removes dead code.
unwrap_used = "deny"                 # Denies the use of `.unwrap()`. Encourages explicit error handling with `?` or `match`.
expect_used = "deny"                 # Denies the use of `.expect()`. Encourages explicit error handling instead of panicking with a custom message.
empty_loop = "deny"                  # Denies empty loops. Prevents accidental infinite loops or logic errors. 
redundant_clone = "deny"             # Denies unnecessary calls to `.clone()`. Improves performance and code readability.
needless_borrow = "deny"             # Denies unnecessary borrowing. Improves code clarity and avoids redundant references.
match_wild_err_arm = "deny"          # Denies using `_` in `match` arms for `Result`/`Option`. Encourages explicit error handling.
wildcard_imports = "deny"            # Denies wildcard imports (`use *`). Improves code clarity and avoids namespace pollution.
unused_self = "deny"                 # Denies unused `self` parameters in methods. Improves code quality by catching potential logic errors.
float_cmp = "deny"                   # Denies direct comparisons of floating-point numbers. Encourages the use of tolerance-based comparisons.
manual_range_contains = "deny"       # Denies manual range checks. Encourages the use of `.contains()` for clarity and correctness.
vec_init_then_push = "deny"          # Denies initializing a `Vec` and then pushing elements. Encourages the use of `Vec::with_capacity` for efficiency.
inefficient_to_string = "deny"       # Denies inefficient string conversions. Encourages the use of `format!` or `Display` for better performance.
large_types_passed_by_value = "deny" # Denies passing large types by value. Improves performance by avoiding unnecessary copies.
unnecessary_wraps = "deny"           # Denies unnecessary `Ok(Some(x))` wrappers. Improves code clarity and reduces boilerplate.
string_add = "deny"                  # Denies using `+` for string concatenation. Encourages the use of `format!` or `push_str` for efficiency.
zero_prefixed_literal = "deny"       # Denies zero-prefixed literals (e.g., `0x01`). Improves code readability and avoids confusion.
cast_lossless = "deny"               # Denies casts that are not lossless. Encourages explicit handling of type conversions.
assertions_on_result_states = "deny" # Denies assertions like `assert!(result.is_ok())`. Encourages direct matching or unwrapping in tests.
bool_assert_comparison = "deny"      # Denies assertions like `assert!(x == true)`. Encourages simpler `assert!(x)`.
print_stdout = "deny"                # Denies `println!` in production code. Encourages proper logging instead of direct stdout prints.
print_stderr = "deny"                # Denies `eprintln!` in production code. Encourages proper error logging.
dbg_macro = "deny"                   # Denies `dbg!` in production code. Prevents accidental debug prints in releases.
unimplemented = "deny"               # Denies `unimplemented!` macros. Ensures all features are fully implemented.
missing_panics_doc = "deny"          # Denies missing documentation for functions that may panic. Improves API safety and clarity.
missing_errors_doc = "deny"          # Denies missing documentation for functions returning `Result`. Improves error handling clarity.
needless_pass_by_value = "deny"      # Force l'utilisation de références quand l'ownership n'est pas nécessaire
