[package]
name = "demo-app"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
iced.workspace = true
iced-code-editor = { path = "../iced-code-editor" }
iced_aw = "0.13.0"
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rfd = "0.17"

[[bin]]
name = "demo-editor"
path = "src/main.rs"

[lints]
workspace = true
